# ChangeLog for media-gfx/imageworsener
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/imageworsener/ChangeLog,v 1.23 2014/04/04 22:00:03 sping Exp $

*imageworsener-1.2.0 (04 Apr 2014)

  04 Apr 2014; Sebastian Pipping <sping@gentoo.org>
  +imageworsener-1.2.0.ebuild:
  Bump to 1.2.0, trivial, license changed to MIT-with-advertising

  27 Mar 2014; Samuli Suominen <ssuominen@gentoo.org>
  imageworsener-1.0.0.ebuild:
  USE="static-libs" and let prune_libtool_files to determine if the libtool
  archive is required.

  27 Mar 2014; Samuli Suominen <ssuominen@gentoo.org>
  -files/imageworsener-0.9.5-disable-webp-tests.patch,
  -files/imageworsener-0.9.5-webp.patch, -files/imageworsener-0.9.8-libm.patch,
  -imageworsener-0.9.10.ebuild, -imageworsener-0.9.3.ebuild,
  -imageworsener-0.9.4.ebuild, -imageworsener-0.9.5.ebuild,
  -imageworsener-0.9.6.ebuild, -imageworsener-0.9.7.ebuild,
  -imageworsener-0.9.8.ebuild, -imageworsener-0.9.9.ebuild:
  old

*imageworsener-1.0.0 (17 Nov 2012)

  17 Nov 2012; Sebastian Pipping <sping@gentoo.org>
  +imageworsener-1.0.0.ebuild:
  Bump to 1.0.0, looks trivial

*imageworsener-0.9.10 (16 Jun 2012)

  16 Jun 2012; Sebastian Pipping <sping@gentoo.org>
  +imageworsener-0.9.10.ebuild:
  Bump to 0.9.10

*imageworsener-0.9.9 (31 Mar 2012)

  31 Mar 2012; Sebastian Pipping <sping@gentoo.org>
  +imageworsener-0.9.9.ebuild:
  Bump to 0.9.9

  15 Mar 2012; Sebastian Pipping <sping@gentoo.org>
  files/imageworsener-0.9.8-libm.patch:
  Use _LIBADD rather than _LDFLAGS as advised by Samuli (bug #408303, comment
  4)

  15 Mar 2012; Sebastian Pipping <sping@gentoo.org> imageworsener-0.9.8.ebuild,
  +files/imageworsener-0.9.8-libm.patch:
  Fix underlinking reported by Piotr Szymaniak (bug #408303)

  04 Mar 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #206112

*imageworsener-0.9.8 (26 Feb 2012)
