@@ -5,14 +5,18 @@ DIST imageworsener-1.2.0.tar.gz 635509 SHA256 97fdb1aafac7bc2339b2ce813071f0900d
 DIST imageworsener-src-0.9.2.tar.gz 211670 SHA256 f9fa780841d9019817a9bcdccecf6652b2900c3ae7e96b63a60420cd3ac27248
 DIST imageworsener-src-1.0.0.tar.gz 609807 SHA256 ccab084b4e3ef4dc2130d34804446e4b7d8eb5e17544122b7e239c60aa45e5cf SHA512 94e01937872bd312d6e0c8c52440099766e3fadd8b8e514fa2915c7f9d08c277c43d1ba51341c4a0df3cd84a73383702bb461ad9d371f1f231ec23d3633da8a6 WHIRLPOOL 518c37c7936fbb0f23d1c304b541758e0a2f88a0de36deeac0fa80d0aff31648c2fb515bd4da5205c2f8a512fb126fb792f6c661fa9ccd6bfe6f46048edf4455
 EBUILD imageworsener-0.9.2.ebuild 891 SHA256 218d58d86eff2c30a3420dc74b9ab0c126f5c8e2d47d62bb6739a425d9a33a3b SHA512 57939bb39bc1892bd13e1b989dc2eb736e951302e2e7ffc268a4cb096284ee4e9f7d73424d0880538e9570c6025f9e0b52b2dbbe64e71f9aecb05c02ddbb8050 WHIRLPOOL 82c1560a20038dbc13e64b70e31a8a644e919c5c4b5af71a0e1887bdd86c9c68bd80a424bcebd1a8837629628938f1116d81167bf917044dbfa50f6b268db20d
-EBUILD imageworsener-1.0.0.ebuild 1123 SHA256 d6571a450ec29d77a0659e3181f2dae09d83ed91416af35c239a36fd8b531ad9 SHA512 64bef437c32f240c4f5f1a65381bc146827b6c55018e991614f2be2b8646b334000491d4d65c316aaf46dc3871fe0a407b57924200ba4a72d79439a03f6ff312 WHIRLPOOL d07f2b5528bc08888c4053f8371bf283766b404a77753c0dc3bfd21716e3e96afa766c5f8ad981b17655b3a6f66ea7d8743a4446c2dd8f5b00404f596b7b43f7
-EBUILD imageworsener-1.2.0.ebuild 1131 SHA256 a4240b1931c912575a37287e6fd63ac65d14c94a2f5719ef4ff4a30be8bf49e0 SHA512 826f6c39a7362f5a7d276203e9cce5fb14a885bd891f2e71b85805b783e6466af3d3496df076f7b4003e56f0b3697f5578d6864fc68c56d9c95365bfead03e89 WHIRLPOOL c0bcdd22ee6b839093f21767b80386c93d319b5de119ae92d1f30a88f0d52f77263b0489b9b65c993fb15e2eb7ab5f79cf8e5219a9b4837d0fd6c0e6c5dbc123
-MISC ChangeLog 4194 SHA256 6b08a9c83469c107071a26dfe8994d9b57e340b719542243be015890e2fe6fce SHA512 02d9a798bb769e6fc6efa484d98c5562fbee5403c2cdcce0b983fa98aa91799f735f1d08d96419ebc5649b92b4e7a95009b5165d7d7b24d51e60804ef60eac31 WHIRLPOOL 93956c20d15c47dcdc0ea15e87e5749413d09dbebaa3baa4df3e7199b894d5d0cfffa9f027f4ddb51b41f83bde7fccfba85bf48c7dcdf308ec4370b14686d2b1
+EBUILD imageworsener-1.0.0.ebuild 1125 SHA256 c05ed4b787c26620b97b064aeff8622bd20823df2948629a08ea4dfa28e6ff06 SHA512 cc3bb64c8d46bc11a7b0934db12acbcb71116efda7d1bc0d6dc49a0cd5da472e8c1157b377fce875051a9a893c55b8bad009dbd43179796772708b87430eb6d9 WHIRLPOOL 429aaf9e342cb5e436524eee5416cd6244fae1800930b902ac8929b58237652e6d938943700c7096f71d12f3379f93c3520c99c1a49ff2b5f28f0add591c7cea
+EBUILD imageworsener-1.2.0.ebuild 1137 SHA256 77e9ad6d9a4f4ca47e4fe27e993bb8704a4a123c2ae30e75631f838873bde610 SHA512 221025e42380ca8a9e003ddfc04536965f44488327d1ca9070d7bf394181874b79f4ac9ccd2be64769e288201b0e2a88b662fc05ab9813cfb981d6c39d8a10e6 WHIRLPOOL 536f03957ec0c1568131f58c97fb3aaf6cdf16847b64cc697dd0c693cbf787b90c2fb18742d041272ff8f8bf2ec06e9c7b84139657a4c57846fdd74e84acdfb1
+MISC ChangeLog 4359 SHA256 c2ad5951cad244dd4116e4a89977dc6db3cd3926649df7f68be4b191d673a294 SHA512 99f806c73a838d20ffd7e4f7caa6bea1a3e0550d010340ff312c0a0407125b3989ef9e2af1d1ec80d9155ef5311e33377c069caf04b797d711f28561f0a5f8a9 WHIRLPOOL a0cb305177ba48350c09de53ffa76c73da94cd3fc58f33f7a1eacd7f998359eb5d63785b0621ef50331fe72d30574a9d841d0997f7ab12ff1f10c57b33621e12
 MISC metadata.xml 303 SHA256 2482516819dbdcdbe404381345f6e32b749a33500b3e5f77556265c83d0d33d0 SHA512 2b5b3cbeb429f70da1d4802487a8f016159675a2bee3c9da13e2106e4867017f14db1c0dbebc26122663325129e1cb76ce38fa4a640d993595a46a37a7a0d724 WHIRLPOOL 42093ca482a69bece1fc730b0210f7d5ff4f0929cafca373b5604fa4442e75a9185953aeb459a39327c7308ab65097ab53c5e9dc14d7da9ccdabb33b0dd8758a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlM/K2kACgkQsAvGakAaFgD+pwCggVjqYqUNBGZtkyptkGRYvmCm
-qKMAn2WP+abmug4TyfeoJorSKM9fOjHZ
-=8S13
+iQEcBAEBCAAGBQJTPy96AAoJEEdUh39IaPFNJh0H/AoUImr4LIIhahZjAaU6yxoC
+8j0cHYIQwhF7abmxnsfLN7xgjiu8w2A0VfN4XY4FkfqZtnHC0KRXVpP523ktUWpY
+bs/mhdGUIIzsK8LZkzXBlhCzKn58bOA4o3PmfHbyuWmGeBdOyKSVkfsduLfpLVOs
+ri2sEx/VHhYpZYkQTtEijm4xXSs5NBXQad8+a02VT9+tIn8VrTDJWbta8k4Q3Hwd
+NCBOpfG8YT5ZfLUhshqX4UUl0xYPvG/QzlrsJRxOpvw/rJ2xv5Gkfs8Aq3MjDeD0
+5jopNEjFTu5wuQNemZCt0p5xIdKZPPK8X4vF76oOvygIzKTA9vlahh+OvOmtRrE=
+=zVcV
 -----END PGP SIGNATURE-----
