@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/imageworsener/imageworsener-1.0.0.ebuild,v 1.2 2014/03/27 12:19:47 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/imageworsener/imageworsener-1.0.0.ebuild,v 1.3 2014/04/04 22:23:10 ssuominen Exp $
 
 EAPI=5
 
@@ -19,7 +19,7 @@ KEYWORDS="~amd64 ~x86"
 IUSE="jpeg png static-libs test webp zlib"
 
 DEPEND="png? ( media-libs/libpng:0 )
-	jpeg? ( virtual/jpeg )
+	jpeg? ( virtual/jpeg:0 )
 	webp? ( >=media-libs/libwebp-0.1.3 )
 	zlib? ( sys-libs/zlib )"
 RDEPEND="${DEPEND}"
