@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/imageworsener
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/imageworsener/ChangeLog,v 1.23 2014/04/04 22:00:03 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/imageworsener/ChangeLog,v 1.24 2014/04/04 22:23:10 ssuominen Exp $
+
+  04 Apr 2014; Samuli Suominen <ssuominen@gentoo.org>
+  imageworsener-1.0.0.ebuild, imageworsener-1.2.0.ebuild:
+  Pull in SLOT="0" of virtual/jpeg for headers.
 
 *imageworsener-1.2.0 (04 Apr 2014)
 
